# hyperliquid-bot-Python

./: .env.example  .gitignore  BOT_QUICK_START.txt  BOT_START_SIMPLE.txt  COPY_PASTE_COMMANDS.txt  CURRENT_STATUS.txt  DETAILED_REFACTOR_ANALYSIS.md  DOCUMENTACAO_CENTRALIZADA.md  DO_THIS_NOW.txt  ESTRATEGIA_TECNICA.md  FINAL_SUMMARY.txt  FIX_PYTEST.md  GIT_COMMANDS.txt  GIT_PUSH_COMMANDS.txt  GO_NOW.txt  INDICE_DOCUMENTACAO.md  LIMPEZA_CONCLUIDA.md  MACOS_SETUP.md  NEXT_STEPS.md  PHASE1_SUMMARY.md  QUICK_FIX.md  README.md  README_FINAL.txt  README_REFACTOR_FINAL.txt  REFACTOR_COMPLETE.md  REFACTOR_INDEX.md  REFACTOR_MASTER_GUIDE.md  REFACTOR_PROGRESS.txt  REFACTOR_SUMMARY.txt  RUN_BOT_GUIDE.md  RUN_TESTS_SIMPLE.md  SETUP.md  SETUP_SUMMARY.md  START_BOT.txt  START_HERE_NOW.txt  STEP_BY_STEP_FINAL.txt  TESTING.md  cleanup_docs.sh  commit.sh  complete_refactor.py  (+16 more)
.docs_archive/: COMMIT_INSTRUCTIONS.md  FINAL_ACTIONS.md  FIX_ML_ERROR.md  GITHUB_PUSH_GUIDE.md  ML_SIGNAL_FIXED.md  NEXT_STEPS.txt  NEXT_STEPS_FINAL.md  QUICK_START_FINAL.md  REFACTOR_ANALYSIS.md  REFACTOR_EXECUTIVE_SUMMARY.md  REFACTOR_FAQ.md  REFACTOR_QUICK_GUIDE.md  REFACTOR_START_HERE.txt  REFACTOR_STATUS.md  START_HERE.md  TERMINAL_ERROR_FIX.md
bots/: btc_conservative.yaml  btc_scalper_5m.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TROUBLESHOOTING.md
models/: model_20251124-191714.json  model_20251124-191714.pkl  model_20251124-232018.json  model_20251124-232018.pkl  model_20251125-175915.json  model_20251125-175915.pkl  model_20251125-175916.json  model_20251125-175916.pkl  model_20251125-175917.json  (+3 more)
(+49 files in other folders)
